bk_ida/gccida/g2/constrain_operands
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/constrain_operands/src/recog.c:2799:4: error: expected ';' after expression
rtx v21; // rsi 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/constrain_operands/src/recog.c:2799:5: error: use of undeclared identifier 'v21'
rtx v21; // rsi 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/constrain_operands/src/recog.c:2800:4: error: expected ';' after expression
rtx v22; // rdi 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/constrain_operands/src/recog.c:2800:5: error: use of undeclared identifier 'v22'
rtx v22; // rdi 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/constrain_operands/src/recog.c:2805:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v27; // ecx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/constrain_operands/src/recog.c:2824:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode; // [rsp+20h] [rbp-338h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/constrain_operands/src/recog.c:2833:14: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
n_operands = recog_data_0.n_operands; 
             ^~~~~~~~~~~~
             recog_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/constrain_operands/src/recog.c:72:19: note: 'recog_data' declared here
struct recog_data recog_data;
                  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/constrain_operands/src/recog.c:2836:22: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( !n_operands || !recog_data_0.n_alternatives || n_operands <= 0 ) 
                     ^~~~~~~~~~~~
                     recog_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/constrain_operands/src/recog.c:72:19: note: 'recog_data' declared here
struct recog_data recog_data;
                  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/constrain_operands/src/recog.c:2839:113: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
*( const char **)( ( char *)&constraints[-1] + ( unsigned int)( 8 * n_operands)) = *( const char **)( ( char *)&recog_data_0.constraints[-1] 
                                                                                                                ^~~~~~~~~~~~
                                                                                                                recog_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/constrain_operands/src/recog.c:72:19: note: 'recog_data' declared here
struct recog_data recog_data;
                  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/constrain_operands/src/recog.c:2841:23: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
qmemcpy( constraints, recog_data_0.constraints, 8LL * ( ( unsigned int)( 8 * n_operands - 1) >> 3)); 
                      ^~~~~~~~~~~~
                      recog_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/constrain_operands/src/recog.c:72:19: note: 'recog_data' declared here
struct recog_data recog_data;
                  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/constrain_operands/src/recog.c:2873:7: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
rtx = recog_data_0.operand[v6]; 
      ^~~~~~~~~~~~
      recog_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/constrain_operands/src/recog.c:72:19: note: 'recog_data' declared here
struct recog_data recog_data;
                  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/constrain_operands/src/recog.c:2886:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v29.rtwint = ( __int64)rtx->fld[0]; 
                       ^~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/constrain_operands/src/recog.c:2894:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( unsigned __int8 *)( v29.rtwint + 2), 
  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/constrain_operands/src/recog.c:2896:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( ( unsigned __int8 *)rtx + 2)); 
  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/constrain_operands/src/recog.c:2897:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v29.rtwint = ( __int64)rtx->fld[0]; 
                       ^~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/constrain_operands/src/recog.c:2900:13: error: expected ';' after expression
rtx = ( rtx)v29.rtwint; 
            ^
            ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/constrain_operands/src/recog.c:2956:1: error: use of undeclared identifier 'v21'
v21 = recog_data_0.operand[v6]; 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/constrain_operands/src/recog.c:2956:7: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
v21 = recog_data_0.operand[v6]; 
      ^~~~~~~~~~~~
      recog_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/constrain_operands/src/recog.c:72:19: note: 'recog_data' declared here
struct recog_data recog_data;
                  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/constrain_operands/src/recog.c:2957:1: error: use of undeclared identifier 'v22'
v22 = recog_data_0.operand[v19]; 
^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/constrain_operands/src/obj/recog.o] Error 1
